Chapitre 2 pour relecture

--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,3 +1,19 @@
+
+@book{getling_rayleigh-benard_1998,
+	location = {Singapore},
+	title = {Rayleigh-Bénard convection: structures and dynamics},
+	isbn = {978-981-02-2657-2},
+	series = {Advanced series in nonlinear dynamics},
+	shorttitle = {Rayleigh-Bénard convection},
+	pagetotal = {245},
+	number = {11},
+	publisher = {World Scientific},
+	author = {Getling, Aleksandr V.},
+	date = {1998},
+	file = {Getling and Getling - 1998 - Rayleigh-Bénard convection structures and dynamic.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\9HIJ4Z34\\Getling and Getling - 1998 - Rayleigh-Bénard convection structures and dynamic.pdf:application/pdf;Table of Contents PDF:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\PRMQSN57\\Getling and Getling - 1998 - Rayleigh-Bénard convection structures and dynamic.pdf:application/pdf},
+}
+
+
 @inproceedings{poese_thermoacoustic_2004,
 	location = {Glasgow, Royaume Uni},
 	title = {Thermoacoustic refrigeration for ice cream sales},
