--- a/fig/fig_SimuConvNat2D/tex/fig_SimuConvNat2D.tex
+++ b/fig/fig_SimuConvNat2D/tex/fig_SimuConvNat2D.tex
@@ -24,7 +24,7 @@
 %	\draw[<->] (-\L/2,\l+.2) -- ++(\L,0) node[midway,above]{$L_c^{(1)}$};	
 	
 	
-	\draw (0,\ylab) node[]{\textbf{(a)}};
+	\draw (0,\ylab) node[]{\textbf{\footnotesize(a)}};
 	
 	% ----------- Zoom sur paroi chaude
 	\begin{scope}[xshift=\xdist]
@@ -53,7 +53,7 @@
 		
 %		\draw[<->] (-\L/2-.2,0) -- ++(0,\l) node[midway,left]{$L_c^{(2)}$};	
 
-		\draw (0,\ylab) node[]{\textbf{(b)}};
+		\draw (0,\ylab) node[]{\textbf{\footnotesize(b)}};
 		
 		
 	\end{scope} 
