--- a/tex/AHX.tex
+++ b/tex/AHX.tex
@@ -59,8 +59,8 @@ La mesure du débit d'eau circulant dans l'échangeur ambiant est également sou
     \external{fig_IncertitudeDebitEau}
 %    \externalremake
     \input{../fig/fig_IncertitudeDebitEau/tex/IncertitudeDebitEau}
-    \caption[Incertitudes de mesure du débit d'eau dans l'échangeur ambiant]{Incertitudes de mesure du débit d'eau dans l'échangeur ambiant. \linebreak \textbf{(a)} débit mesuré par le débitmètre à turbine $\dot q_{\sf tb}$ en fonction de celui mesuré par le débitmètre à ultrason $\dot q_{\sf us}$. \linebreak\textbf{(b)} écart relatif $\epsilon=\frac{|\dot q_{\sf us}-\dot q_{\sf tb}|}{\dot q_{\sf us}}$ entre les deux mesures obtenues.}
+    \caption[Incertitudes de mesure du débit d'eau dans l'échangeur ambiant]{Incertitudes de mesure du débit d'eau dans l'échangeur ambiant. \textbf{(a)} débit mesuré par le débitmètre à turbine $\dot q_{\sf tb}$ en fonction de celui mesuré par le débitmètre à ultrason $\dot q_{\sf us}$. \textbf{(b)} écart relatif $\epsilon=\frac{|\dot q_{\sf us}-\dot q_{\sf tb}|}{\dot q_{\sf us}}$ entre les deux mesures obtenues.}
     \label{fig:IncertitudeDebitEau}
 \end{figure}%
 
-Texte après le float
+\echaf{Texte après le float}
