--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -308,10 +308,10 @@ Encadrants : & Hélène Bailliet, \textit{Université de Poitiers}\\
 \maketitle
 \cleardoublepage
 
-%\input{Citations}
-%
-%\input{Remerciements}
-%\newpage
+\input{Citations}
+
+\input{Remerciements}
+\newpage
 
 {\hypersetup{linkcolor = black}
 \tableofcontents%\label{chap:tableofcontents}\addcontentsline{toc}{chapter}{\nameref{chap:tableofcontents}}%\mtcaddchapter
